refactor: 迁移 commons-io 到标准 Java NIO API